--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'eclipse'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8' 
 
 mainClassName = 'org.asamk.signal.Main'
 
